--- a/css/styles.css
+++ b/css/styles.css
@@ -2701,3 +2701,5 @@ html body .resource_wrap { padding-bottom:8% !important;}
  /* Mobile Online App End*/
  
   .ie8 .resource_wrap #displayContent { padding-top:74px;}
+  
+  .prog-summarys.download { text-align:center; padding-bottom:10px;}
